unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/ia_crm__Intacct_Journal_Entry_Line__c.object-meta.xml
<CustomObject>
    <label>Intacct Journal Entry Line</label>
    <nameField>
        <label>Intacct Journal Entry Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intacct Journal Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>