unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__Department__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Department__c.ia_crm__Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Department__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>