unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__Intacct_Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Account</label>
    <referenceTo>ia_crm__Intacct_Account__c</referenceTo>
    <relationshipName>NonProfitJournalEntriesIntacctAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>