unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__Intacct_Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Journal_Entry__c</fullName>
    <label>Intacct Journal Entry</label>
    <referenceTo>ia_crm__Intacct_Journal_Entry__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines</relationshipLabel>
    <relationshipName>Intacct_Journal_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>