unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__Project__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>ia_crm__Project__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>