unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>