unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Customer)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>