unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Employee__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Employee</label>
    <referenceTo>ia_crm__Employees__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Employee)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>