unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Intacct_Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Intacct_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Intacct Account</label>
    <referenceTo>ia_crm__Intacct_Account__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Intacct Account)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>