unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Intacct_Contract__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Intacct_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Intacct Contract</label>
    <referenceTo>ia_crm__Intacct_Contract__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Intacct Contract)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>