unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Location</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Location)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>