unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Line_Number__c</fullName>
    <label>SB Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>