unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__SB_Product__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SB Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Intacct Journal Entry Lines (SB Product)</relationshipLabel>
    <relationshipName>Intacct_Journal_Entry_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>