unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/fields/ia_crm__TransactionCredit__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__TransactionCredit__c</fullName>
    <label>Credit / Decrease</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>