unpackaged/main/default/objects/ia_crm__Intacct_Journal_Entry_Line__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Intacct_Journal_Entry__c</columns>
    <columns>ia_crm__Intacct_Account__c</columns>
    <columns>ia_crm__TransactionCredit__c</columns>
    <columns>ia_crm__TransactionDebit__c</columns>
    <columns>ia_crm__Intacct_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>